--- a/notebooks/01 - exploratory-data-analysis.ipynb
+++ b/notebooks/01 - exploratory-data-analysis.ipynb
@@ -736,9 +736,6 @@
    "execution_count": 5,
    "id": "7eb1dee9-6527-4a2f-ac07-27e4699925db",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -2426,9 +2423,6 @@
    "execution_count": 25,
    "id": "7414169c-9639-4cc6-bf30-e44dfdf0a4b3",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -4797,6 +4791,60 @@
     " * A faixa etária com mais cartões é entre 25 e 35 anos.\n",
     " * Temos uma maior quantodade de pequenos limites distribuidos, quanto maior o limite menos concessões foram feitas."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ef1b0edd-bdae-48df-8a29-a938f6ac8cff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ID                                 2\n",
+       "LIMIT_BAL                     120000\n",
+       "SEX                                2\n",
+       "EDUCATION                          2\n",
+       "MARRIAGE                           2\n",
+       "AGE                               26\n",
+       "PAY_0                             -1\n",
+       "PAY_2                              2\n",
+       "PAY_3                              0\n",
+       "PAY_4                              0\n",
+       "PAY_5                              0\n",
+       "PAY_6                              2\n",
+       "BILL_AMT1                       2682\n",
+       "BILL_AMT2                       1725\n",
+       "BILL_AMT3                       2682\n",
+       "BILL_AMT4                       3272\n",
+       "BILL_AMT5                       3455\n",
+       "BILL_AMT6                       3261\n",
+       "PAY_AMT1                           0\n",
+       "PAY_AMT2                        1000\n",
+       "PAY_AMT3                        1000\n",
+       "PAY_AMT4                        1000\n",
+       "PAY_AMT5                           0\n",
+       "PAY_AMT6                        2000\n",
+       "default payment next month         1\n",
+       "Name: 1, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dca4e2a-e967-465d-ad9a-37e5406f88f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
