várias correçoes gramaticais e descrições no comparative analisys

--- a/notebooks/01 - exploratory-data-analysis.ipynb
+++ b/notebooks/01 - exploratory-data-analysis.ipynb
@@ -4785,8 +4785,8 @@
     "\n",
     " * Os dados não estão balanceados com relação ao predito\n",
     " * Os dados descritos na legenda original do conjunto de dados não englobavam todos os ranges dos itens relacionados na base, assim foi adequado unificar os valores que estavam fora da classificação da legenda original em uma categoria chamada outros, tendo o impacto na análise dos dados de forma ínfima, sendo menor que 2% no caso da categoria educação 1,56% e 1,26% na categoria estado civil.\n",
-    " * As variáveios de estatus apresentavam os valores -2  0 que não estavam na documentação, em pesquisa na literatura encontramos que -2 refere-se a fatura fechada com valor Zero e o marca o cliente que pagou um valor menor que o valor de fechamento da fatura.\n",
-    " * A maoipr parte das concessões de cartões de crédito foram para coleites com nível superior e pós-graduação.\n",
+    " * As variáveis de estatus apresentavam os valores -2  0 que não estavam na documentação, em pesquisa na literatura encontramos que -2 refere-se a fatura fechada com valor Zero e o marca o cliente que pagou um valor menor que o valor de fechamento da fatura.\n",
+    " * A maior parte das concessões de cartões de crédito foram para clientes com nível superior e pós-graduação.\n",
     " * O publico feminino detem a maioria dos cartões.\n",
     " * A faixa etária com mais cartões é entre 25 e 35 anos.\n",
     " * Temos uma maior quantodade de pequenos limites distribuidos, quanto maior o limite menos concessões foram feitas."
